[metadata]
name = ipaparser
version = 1.0.0
author = Danylo Mysak
author_email = danmysak@gmail.com
description = Phonetically aware library for parsing IPA transcriptions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danmysak/ipa-parser
project_urls =
    Bug Tracker = https://github.com/danmysak/ipa-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where = src
